--- a/src/index.html
+++ b/src/index.html
@@ -10,39 +10,50 @@
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=BenchNine:wght@700&family=Lato:wght@400;700&family=Montserrat:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="style/style.css" />
     <title>Portfolio - Clark Inocalla</title>
   </head>
   <body>
     <header>
-      <div class="logo-container">
-        <img src="./img/logo.png" alt="" />
-      </div>
       <nav class="main-nav-links">
-        <ul>
-          <li>HOME</li>
-          <li>PROJECTS</li>
-          <li>ABOUT ME</li>
-          <li>CONTACT</li>
-          <li>
-            <ul>
-              <li><i class="fab fa-github"></i></li>
-              <li><i class="fab fa-twitter"></i></li>
-              <li><i class="fab fa-linkedin"></i></li>
-            </ul>
-          </li>
+        <div class="logo-container">
+          <a href="/src/"><img src="./img/logo.png" alt="" /></a>
+        </div>
+        <ul class="nav-links">
+          <li><a href="/src">HOME</a></li>
+          <li><a href="#proj">PROJECTS</a></li>
+          <li><a href="#">ABOUT ME</a></li>
+          <li><a href="#">CONTACT</a></li>
         </ul>
+        <ul class="sub-nav-links">
+          <li><a href="#" class="fab fa-github"></a></li>
+          <li><a href="#" class="fab fa-twitter"></a></li>
+          <li><a href="#" class="fab fa-linkedin"></a></li>
+        </ul>
+        <div class="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
       </nav>
     </header>
     <main>
-      <section>
+      <section class="hero-section">
         <div class="container bg-light-blue">
-          <div class="split">
-            <div>
+          <div class="split-hero">
+            <div class="hero-content">
               <h1>WEB & MOBILE APPLICATIONS DEVELOPER</h1>
               <p>
-                Hi, my name is Clark Inocalla I’m a recent Software Engineer
-                graduate at University of Regina. I specialize in UI/UX design
-                where I can make your vision come to life.
+                Hi, my name is <mark class="bold-blue">Clark Inocalla</mark> I’m
+                a recent Software Engineer graduate at University of Regina. I
+                specialize in UI/UX design where I can make your vision come to
+                <mark class="bold-blue">life</mark>.
               </p>
             </div>
             <div>
@@ -51,21 +62,21 @@
           </div>
         </div>
       </section>
-      <section class="text-center">
+      <section class="project-header-section text-center" id="proj">
         <div class="container">
           <h2>PROJECTS</h2>
         </div>
       </section>
-      <section>
+      <section class="project-ht-section">
         <div class="container">
-          <div class="split">
-            <div>
+          <div class="split-proj">
+            <div class="desk-img">
               <img
                 src="./img/humane-transport.png"
                 alt="humane transport logo"
               />
             </div>
-            <div>
+            <div class="ht-content">
               <h3>Humane Transport</h3>
               <p>
                 A Flutter and Firebase mobile application to record Canadian
@@ -74,13 +85,19 @@
                 Act and the Canadian Food Inspection Agency (CFIA).
               </p>
             </div>
+            <div class="mobile-img">
+              <img
+                src="./img/humane-transport.png"
+                alt="humane transport logo"
+              />
+            </div>
           </div>
         </div>
       </section>
-      <section>
+      <section class="project-lgp-section">
         <div class="container">
-          <div class="split">
-            <div>
+          <div class="split-proj">
+            <div class="lgp-content">
               <h3>Let's Get Physical</h3>
               <p>
                 A mobile application where people in a community can share their
@@ -97,12 +114,12 @@
           </div>
         </div>
       </section>
-      <section class="text-center">
+      <section class="about-header-section text-center">
         <div class="container">
           <h2>ABOUT ME</h2>
         </div>
       </section>
-      <section class="bg-dark-blue">
+      <section class="about-me-section bg-dark-blue">
         <div class="container">
           <div class="split">
             <div>
@@ -137,36 +154,52 @@
                 algorithms.
               </p>
             </div>
-            <div>
-              <img src="./img/about-me-avatar.png" alt="" />
-            </div>
           </div>
         </div>
+        <div class="abt-me-avatar">
+          <img src="/img/about-me-avatar.png" alt="" />
+        </div>
       </section>
-      <section class="text-center">
+      <section class="contact-header-section text-center">
         <div class="container">
-          <h2>CONTACT ME</h2>
+          <h2>CONTACT</h2>
         </div>
       </section>
-      <section>
+      <section class="contact-section">
         <div class="container bg-light-blue">
-          <div>
-            <form action="">
-              <label for="user-name">Name</label>
-              <input type="text" , name="user-name" />
-              <label for="email">Email</label>
-              <input type="email" , name="email" />
-            </form>
-          </div>
-          <div>
-            <button>Send Message</button>
-          </div>
+          <form
+            action="https://formsubmit.co/your-random-string"
+            method="POST"
+            class="contact-form"
+          >
+            <label class="field-name">
+              <input type="text" name="user-name" id="user-name" required />
+              <span class="name-placeholder">Enter name</span>
+            </label>
+            <label class="field-em">
+              <input type="emai" name="user-em" id="user-em" required />
+              <span class="em-placeholder">Enter email</span>
+            </label>
+            <label class="field-message">
+              <textarea
+                name="user-message"
+                id="user-message"
+                cols="30"
+                rows="10"
+                required
+              ></textarea>
+              <span class="message-placeholder">How can I help you?</span>
+            </label>
+            <div class="container-btn">
+              <button class="submit-btn">Send Message</button>
+            </div>
+          </form>
         </div>
       </section>
     </main>
     <footer>
       <div class="container">
-        <h4>&copy; Clark Inocalla. All rights reserved.</h4>
+        <h4 class="text-center">&copy; Clark Inocalla. All rights reserved.</h4>
       </div>
     </footer>
   </body>
