--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,10 @@
           <a href="/src/"><img src="./img/logo.png" alt="" /></a>
         </div>
         <ul class="nav-links">
-          <li><a href="/src">HOME</a></li>
+          <li><a href="/src/index.html">HOME</a></li>
           <li><a href="#proj">PROJECTS</a></li>
-          <li><a href="#">ABOUT ME</a></li>
-          <li><a href="#">CONTACT</a></li>
+          <li><a href="#abt-me">ABOUT ME</a></li>
+          <li><a href="#contact">CONTACT</a></li>
         </ul>
         <ul class="sub-nav-links">
           <li><a href="#" class="fab fa-github"></a></li>
@@ -114,7 +114,7 @@
           </div>
         </div>
       </section>
-      <section class="about-header-section text-center">
+      <section class="about-header-section text-center" id="abt-me">
         <div class="container">
           <h2>ABOUT ME</h2>
         </div>
@@ -160,7 +160,7 @@
           <img src="/img/about-me-avatar.png" alt="" />
         </div>
       </section>
-      <section class="contact-header-section text-center">
+      <section class="contact-header-section text-center" id="contact">
         <div class="container">
           <h2>CONTACT</h2>
         </div>
