--- a/src/index.html
+++ b/src/index.html
@@ -23,18 +23,36 @@
     <header>
       <nav class="main-nav-links">
         <div class="logo-container">
-          <a href="/src/"><img src="./img/logo.png" alt="" /></a>
+          <a href="/"><img src="./img/logo.png" alt="" /></a>
         </div>
         <ul class="nav-links">
-          <li><a href="/src">HOME</a></li>
+          <li><a href="/">HOME</a></li>
           <li><a href="#proj">PROJECTS</a></li>
           <li><a href="#abt-me">ABOUT ME</a></li>
           <li><a href="#contact">CONTACT</a></li>
         </ul>
         <ul class="sub-nav-links">
-          <li><a href="#" class="fab fa-github"></a></li>
-          <li><a href="#" class="fab fa-twitter"></a></li>
-          <li><a href="#" class="fab fa-linkedin"></a></li>
+          <li>
+            <a
+              href="https://github.com/MummenRider"
+              class="fab fa-github"
+              target="_blank"
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://twitter.com/CInocalla"
+              class="fab fa-twitter"
+              target="_blank"
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/clark-inocalla-257369157"
+              class="fab fa-linkedin"
+              target="_blank"
+            ></a>
+          </li>
         </ul>
         <div class="burger">
           <div class="line1"></div>
@@ -44,6 +62,7 @@
       </nav>
     </header>
     <main>
+      <div class="overlay"></div>
       <section class="hero-section">
         <div class="container bg-light-blue">
           <div class="split-hero">
@@ -202,5 +221,6 @@
         <h4 class="text-center">&copy; Clark Inocalla. All rights reserved.</h4>
       </div>
     </footer>
+    <script src="/js/app.js"></script>
   </body>
 </html>
