Finished slide and fade in effect on scroll

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,6 @@
       </nav>
     </header>
     <main>
-      <div class="overlay"></div>
       <section class="hero-section">
         <div class="container bg-light-blue">
           <div class="split-hero">
@@ -93,9 +92,10 @@
               <img
                 src="./img/humane-transport.png"
                 alt="humane transport logo"
+                class="slide-in from-left"
               />
             </div>
-            <div class="ht-content">
+            <div class="ht-content slide-in from-right">
               <h3>Humane Transport</h3>
               <p>
                 A Flutter and Firebase mobile application to record Canadian
@@ -116,7 +116,7 @@
       <section class="project-lgp-section">
         <div class="container">
           <div class="split-proj">
-            <div class="lgp-content">
+            <div class="lgp-content slide-in from-left">
               <h3>Let's Get Physical</h3>
               <p>
                 A mobile application where people in a community can share their
@@ -128,7 +128,11 @@
               </p>
             </div>
             <div>
-              <img src="./img/lgp.png" alt="lgp logo" />
+              <img
+                src="./img/lgp.png"
+                alt="lgp logo"
+                class="slide-in from-right"
+              />
             </div>
           </div>
         </div>
@@ -141,7 +145,7 @@
       <section class="about-me-section bg-dark-blue">
         <div class="container">
           <div class="split">
-            <div>
+            <div class="fade-in">
               <h3>Education</h3>
               <p>
                 I started my Software Engineering journey in winter 2015 at
@@ -153,7 +157,7 @@
                 and completed my degree!
               </p>
             </div>
-            <div>
+            <div class="fade-in">
               <h3>Internship</h3>
               <p>
                 In 2019, I was fortunate enough to work at eHealth Saskatchewan
@@ -163,7 +167,7 @@
                 to their existing application.
               </p>
             </div>
-            <div>
+            <div class="fade-in">
               <h3>What I'm Doing</h3>
               <p>
                 I was planning to go for vacation right after I graduate, but
