Finished the form

--- a/src/index.html
+++ b/src/index.html
@@ -191,7 +191,7 @@
       <section class="contact-section">
         <div class="container bg-light-blue">
           <form
-            action="https://formsubmit.co/your-random-string"
+            action="https://formsubmit.co/clark.inocalla@hotmail.com"
             method="POST"
             class="contact-form"
           >
@@ -200,7 +200,7 @@
               <span class="name-placeholder">Enter name</span>
             </label>
             <label class="field-em">
-              <input type="emai" name="user-em" id="user-em" required />
+              <input type="email" name="user-em" id="user-em" required />
               <span class="em-placeholder">Enter email</span>
             </label>
             <label class="field-message">
