--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
       <nav class="main-nav-links">
         <div class="logo-container">
-          <a href="/"><img src="./img/logo.png" alt="" /></a>
+          <a href="/"><img src="/img/logo.png" alt="" /></a>
         </div>
         <ul class="nav-links">
           <li><a href="/">HOME</a></li>
@@ -90,7 +90,7 @@
           <div class="split-proj">
             <div class="desk-img">
               <img
-                src="./img/humane-transport.png"
+                src="/img/humane-transport.png"
                 alt="humane transport logo"
                 class="slide-in from-left"
               />
@@ -106,7 +106,7 @@
             </div>
             <div class="mobile-img">
               <img
-                src="./img/humane-transport.png"
+                src="/img/humane-transport.png"
                 alt="humane transport logo"
               />
             </div>
@@ -129,7 +129,7 @@
             </div>
             <div>
               <img
-                src="./img/lgp.png"
+                src="/img/lgp.png"
                 alt="lgp logo"
                 class="slide-in from-right"
               />
