renamed files in index.html

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
     <title>Portfolio - Clark Inocalla</title>
   </head>
   <body>
     <header>
       <nav class="main-nav-links">
         <div class="logo-container">
-          <a href="/"><img src="/img/logo.png" alt="" /></a>
+          <a href="/"><img src="./img/logo.png" alt="" /></a>
         </div>
         <ul class="nav-links">
           <li><a href="/">HOME</a></li>
@@ -75,7 +75,7 @@
               </p>
             </div>
             <div>
-              <img src="img/prof-pic.png" alt="My profile picture" />
+              <img src="./img/prof-pic.png" alt="My profile picture" />
             </div>
           </div>
         </div>
@@ -90,7 +90,7 @@
           <div class="split-proj">
             <div class="desk-img">
               <img
-                src="/img/humane-transport.png"
+                src="./img/humane-transport.png"
                 alt="humane transport logo"
                 class="slide-in from-left"
               />
@@ -106,7 +106,7 @@
             </div>
             <div class="mobile-img">
               <img
-                src="/img/humane-transport.png"
+                src="./img/humane-transport.png"
                 alt="humane transport logo"
               />
             </div>
@@ -129,7 +129,7 @@
             </div>
             <div>
               <img
-                src="/img/lgp.png"
+                src="./img/lgp.png"
                 alt="lgp logo"
                 class="slide-in from-right"
               />
@@ -180,7 +180,7 @@
           </div>
         </div>
         <div class="abt-me-avatar">
-          <img src="/img/about-me-avatar.png" alt="" />
+          <img src="./img/about-me-avatar.png" alt="" />
         </div>
       </section>
       <section class="contact-header-section text-center" id="contact">
@@ -225,6 +225,6 @@
         <h4 class="text-center">&copy; Clark Inocalla. All rights reserved.</h4>
       </div>
     </footer>
-    <script src="/js/app.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
