Fixed overflowing hero content

--- a/index.html
+++ b/index.html
@@ -67,16 +67,14 @@
     <main>
       <section class="hero-section">
         <div class="container bg-light-blue">
-          <div class="split-hero">
-            <div class="hero-content">
-              <h1>WEB & MOBILE APPLICATIONS DEVELOPER</h1>
-              <p>
-                Hi, my name is <mark class="bold-blue">Clark Inocalla</mark> I’m
-                a recent Software Engineer graduate at University of Regina. I
-                specialize in UI/UX design where I can make your vision come to
-                <mark class="bold-blue">life</mark>.
-              </p>
-            </div>
+          <div class="hero-content">
+            <h1>WEB & MOBILE APPLICATIONS DEVELOPER</h1>
+            <p>
+              Hi, my name is <mark class="bold-blue">Clark Inocalla</mark> I’m a
+              recent Software Engineer graduate at University of Regina. I
+              specialize in UI/UX design where I can make your vision come to
+              <mark class="bold-blue">life</mark>.
+            </p>
             <div>
               <img src="./img/prof-pic.png" alt="My profile picture" />
             </div>
