--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=BenchNine:wght@700&family=Lato:wght@400;700&family=Montserrat:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="icon" href="./img/logo.png" />
     <link rel="stylesheet" href="./style/style.css" />
     <title>Portfolio - Clark Inocalla</title>
   </head>
